--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -13,33 +13,33 @@ p {
 }
 
 h1 {
-  font-size: 1.6rem;
+  /* font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.4;
   margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-top: 2rem; */
 }
 
 h2 {
-  font-size: 1.2rem;
+  /* font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.4;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem; */
 }
 
 h4 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  /* margin-top: 0.5rem;
+  margin-bottom: 0.5rem; */
 }
 
 h5 {
-  margin-bottom: 1rem;
-  margin-top: 0.5rem;
+  /* margin-bottom: 1rem;
+  margin-top: 0.5rem; */
 }
 
 p {
-  font-size: 1rem;
-  line-height: 1.4;
+  /* font-size: 1rem; */
+  line-height: 1.5;
 }
 
 /* a {
@@ -88,9 +88,9 @@ fieldset {
 
 form {
   max-width: 100%;
-  @media (min-width: 768px) {
+  /* @media (min-width: 768px) {
     max-width: 400px;
-  }
+  } */
 }
 
 input {
