--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -27,4 +27,15 @@
   body {
     font-family: 'HelveticaNeue', sans-serif;
   }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .hide-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
